[gd_scene load_steps=13 format=2]

[ext_resource path="res://Levels/Base/ItemAcceptor.gd" type="Script" id=1]
[ext_resource path="res://Levels/Base/Level.gd" type="Script" id=2]
[ext_resource path="res://Levels/Base/VHS.tres" type="Material" id=3]
[ext_resource path="res://Levels/Watcher.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Base/TileMap.tscn" type="PackedScene" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=7]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;	
render_mode blend_mix;	
uniform float amount = 0.0;	
void fragment() {	
	float a = fract(sin(dot(UV, vec2(134.128, 63.773))) * (538.71+0.3*sin(TIME)+2.7*cos(TIME)-5.0*sin(TIME)));
	vec4 col = texture(TEXTURE, UV);
	col.a *= pow(a, amount);
	COLOR = col;
}	"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/amount = 600.0

[sub_resource type="Animation" id=5]
resource_name = "New Anim"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:material:shader_param/amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1.3, 1.7, 2 ),
"transitions": PoolRealArray( 1, 2, 1.46408, -2 ),
"update": 0,
"values": [ 0.0, 3.0, 100.0, 600.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Environment" id=1]
background_mode = 4
dof_blur_far_distance = 0.09
dof_blur_far_transition = 2.1
dof_blur_far_quality = 2
dof_blur_near_distance = 18.85
dof_blur_near_transition = 3.31
dof_blur_near_amount = 0.31
dof_blur_near_quality = 2
glow_intensity = 2.73
glow_strength = 0.96
glow_bloom = 0.38
glow_blend_mode = 1

[sub_resource type="Animation" id=2]
resource_name = "Rewind"
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_rewind"
} ]
}

[node name="Level" type="Navigation2D"]
script = ExtResource( 2 )
level_ID = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 9

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
material = SubResource( 4 )
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 5 )

[node name="TileMap" parent="." instance=ExtResource( 5 )]
collision_layer = 128
collision_mask = 360

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Watcher" parent="." instance=ExtResource( 4 )]
process_mode = 0

[node name="RewindLayer" type="CanvasLayer" parent="."]

[node name="ScreenRewinder" type="AnimationPlayer" parent="RewindLayer"]
playback_speed = 8.0
anims/Rewind = SubResource( 2 )

[node name="ReplayScreen" type="TextureRect" parent="RewindLayer"]
material = ExtResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 1
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemAcceptor" type="Control" parent="RewindLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CaptureRate" type="Timer" parent="."]
process_mode = 0
autostart = true

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 294, 166 )
[connection signal="timeout" from="CaptureRate" to="." method="_on_CaptureRate_timeout"]
